# Kendali-ROV

./: .gitignore  README.md  mav.parm
config/: mavros_params.yaml
config/env/: jazzy.env  ports.env
docs/: HOW_TO_ADD_YOUR_ALGORITHM.md  index.md
install/: local_setup.sh  setup.sh
install/rov_ctrl_alg_template/lib/rov_ctrl_alg_template/: alg_runner  alg_runner_gmc
install/rov_ctrl_alg_template/share/rov_ctrl_alg_template/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rov_ctrl_core/lib/rov_ctrl_core/: manual_control_node  mode_arming_node  safety_failsafe_node
install/rov_ctrl_core/share/rov_ctrl_core/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rov_ctrl_demos/share/rov_ctrl_demos/: package.sh  (+5 more)
launch/: mavros_only.launch.py
log/: latest_build
scripts/: rov_demo.sh  rov_start.sh  rov_stop.sh
src/rov_ctrl_alg_template/: package.xml  setup.cfg  setup.py
src/rov_ctrl_alg_template/config/: example_pid.yaml
src/rov_ctrl_alg_template/launch/: algorithm_stack.launch.py
src/rov_ctrl_alg_template/rov_ctrl_alg_template/algorithms/: base.py  forward_right_stop.py  pid_hold_depth.py
src/rov_ctrl_alg_template/rov_ctrl_alg_template/nodes/: alg_runner.py  example_square_sweep.py
src/rov_ctrl_core/: package.xml  setup.cfg  setup.py
src/rov_ctrl_core/rov_ctrl_core/nodes/: manual_control_node.py  mode_arming_node.py  safety_failsafe_node.py
src/rov_ctrl_core/rov_ctrl_core/utils/: mavlink_scale.py
src/rov_ctrl_demos/: package.xml  setup.cfg  setup.py
src/rov_ctrl_demos/rov_ctrl_demos/nodes/: simple_forward_demo.py
src/rov_ctrl_if/: package.xml  setup.cfg  setup.py
src/rov_ctrl_if/config/: control_mux.yaml
src/rov_ctrl_if/launch/: control_stack.launch.py
(+13 files in other folders)
