<?xml version="1.0"?><package format="3">
  <name>rov_ctrl_core</name><version>0.1.0</version>
  <description>Core nodes for ROV control</description>
  <maintainer email="you@example.com">Your Name</maintainer><license>MIT</license>
  <exec_depend>ament_index_python</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend><exec_depend>mavros_msgs</exec_depend><exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
